syntax = "proto3";

option go_package = "./;proto";

package proto;
import "google/api/annotations.proto";


service CalculateService {
  rpc Add (AddRequest) returns (AddReply){
    option (google.api.http) = {
      post: "/v1/add"
      body: "*"
    };
  }

  rpc Sub (SubRequest) returns (SubReply){
    option (google.api.http) = {
      post: "/v1/sub"
      body: "*"
    };
  }

  rpc Mul (MulRequest) returns (MulReply){
    option (google.api.http) = {
      post: "/v1/mul"
      body: "*"
    };
  }

  rpc Div (DivRequest) returns (DivReply){
    option (google.api.http) = {
      post: "/v1/div"
      body: "*"
    };
  }
}


message AddRequest {
  int64 a = 1;
  int64 b = 2;
}

message AddReply {
  int64 res = 1;
}

message SubRequest {
  int64 a = 1;
  int64 b = 2;
}

message SubReply {
  int64 res = 1;
}

message MulRequest {
  int64 a = 1;
  int64 b = 2;
}

message MulReply {
  int64 res = 1;
}

message DivRequest {
  int64 a = 1;
  int64 b = 2;
}

message DivReply {
  int64 res = 1;
}